test/tests/stages/18_structures/invalid_parse/extra_credit/union_two_tags.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  union
  identifier(x)
  identifier(y)
  {
  int
  identifier(a)
  ;
  }
  ;
